--- a/src/Theme/sass/abstract/_variables.scss
+++ b/src/Theme/sass/abstract/_variables.scss
@@ -191,7 +191,7 @@ $db-backdrop-z-index: 100 !default;
 
 // Dialog
 $db-dialog-backdrop: $db-backdrop-bg-color !default;
-$db-dialog-width: 50rem !default;
+$db-dialog-width: 80rem !default;
 $db-dialog-height: 60rem !default;
 $db-dialog-box-shadow: 0 0 12px $black !default;
 $db-dialog-bg-color: $white !default;
